Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/Multibound1.out
Multibound1.java:16:19: compiler.err.not.within.bounds: Multibound1.D, T
1 error
